--- a/app/css/design.css
+++ b/app/css/design.css
@@ -133,3 +133,12 @@
 .insideColor {
     background-color: #DCDCDC;
 }
+
+.my-custom-scrollbar {
+    position: relative;
+    height: 730px;
+    overflow: auto;
+}
+.table-wrapper-scroll-y {
+    display: block;
+}
